--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "godotTools.editorPath.godot4": "/home/cdez/.myApps/Godot_v4.4.1-stable_linux.x86_64"
+    "godotTools.editorPath.godot4": "/home/cdez/.myApps/Godot_v4.4.1-stable_linux.x86_64",
+        "files.exclude": {
+  "**/*.uid": true
+}
+    
 }
